Enforce modernizer in openflowplugin-impl
We are using different objects here, which unfortunately is bound to
break at some point in the future. For now change the values to lie
outside of the cached range, use Integer.valueOf() and flip modernizer
to enforcing mode.

Change-Id: I8b2a1f4c24846d4d95fc610f25de1fa978b8e649
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>